<resources>
    <string name="app_name">Covid-19</string>
    <string name="sign_up_text">SignUp Here</string>
    <string name="sign_in">Sign In</string>
    <string name="password">Password</string>
    <string name="email">Email</string>
    <string name="title">Title</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="sign_in_note">Already Register? SignIn Here</string>
    <string name="sign_up">Sign Up</string>
    <string name="submit">Submit</string>
    <string name="desc">Description</string>
    <string name="conform_password">Conform Password</string>
    <string name="title_activity_maps">Map</string>
    <string name="facebook_app_id">669566127159770</string>
    <string name="fb_login_protocol_scheme">fb669566127159770</string>
    <string name="logout">Logout</string>
    <string name="longitude">Longitude</string>
    <string name="latitude">Latitude</string>
    <string name="Statistics">Statistics</string>
    <string name="not_in_denger_zone">Are you in danger zone</string>
    <string name="about_me">About me:</string>
    <string name="emergency_info">Emergency Info</string>
    <string name="additional_info">additional info</string>
    <string name="go_to_main_screen">Get Registered</string>
    <string name="make_country_corona_free">Make country Corona Free</string>
    <string name="register_with_your_mail">Register With Your Mail</string>
    <string name="feedback">Feedback</string>
    <string name="feeds">Feeds</string>
    <string name="positive_cases">Positive Cases</string>
    <string name="select_your_topic">Select your topic</string>
    <string name="send_feedback">send feedback</string>
    <string name="would_you_like_an_email_response">would you like an email response</string>
    <string name="feedbackemail">feedbackemail</string>
    <string name="write_your_complaint_or_feedback">Write your Complaint or feedback</string>
    <string name="feedbackname">feedbackname</string>

    <string name="feedbacktype1">Content Related</string>
    <string name="feedbacktype2">Complains regarding Covid-19</string>
    <string name="feedbacktype3">Government Related</string>
    <string name="feedbacktype4">Help!! Related</string>
    <string name="donate">Donate!!!</string>
    <string name="forgot_password">Forgot password???</string>
    <string name="enter_mail_to_recover_password">Enter mail to recover password</string>
    <string name="recover">Recover</string>
    <string name="not_register">Not Register ??</string>
    <string name="communition">Communition</string>

    <string name="home">Home</string>
    <string name="track_location">Track Location</string>
    <string name="add_cases">Add Positive Cases</string>
    <string name="arogyasetu_2">Covid-19</string>
    <string name="dashboard">dashboard</string>
    <string name="todo">TODO</string>
    <string name="news_feeds">News Feeds</string>
    <string name="add_feeds">Add Feeds</string>
    <string name="covid_19">COVID-19</string>
    <string name="feedback_block">Feedback Block</string>
    <string name="Top_News"> Top News</string>

    <string name="residential_add">Residential Address</string>
    <string name="city">City</string>
    <string name="country">Country</string>

    <string name="title_activity_scrolling">ScrollingActivity</string>

    <string name="action_settings">Settings</string>
    <string name="choose_image">Choose Image</string>
    <string name="rationale_camera">This app needs access to your camera and storage so you can take pictures and store it.</string>
    <string name="hide_your_identity">Hide Your Identity?</string>
    <string name="name">Name</string>
    <string name="feedback_message">Feedback Message</string>
    <string name="user">User</string>
    <string-array name="feedbacktypelist">
        <item>@string/feedbacktype1</item>
        <item>@string/feedbacktype2</item>
        <item>@string/feedbacktype3</item>
        <item>@string/feedbacktype4</item>
    </string-array>

</resources>
