<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/covid19"
    tools:context=".forgotpassword">

    <TextView
        android:id="@+id/textView13"
        android:layout_width="361dp"
        android:layout_height="48dp"
        android:layout_marginTop="60dp"
        android:fontFamily="@font/audiowide"
        android:text="@string/forgot_password"
        android:textColor="#FFFEFE"
        android:textSize="30sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/editText8"
        android:layout_width="256dp"
        android:layout_height="29dp"
        android:layout_marginTop="92dp"
        android:background="#A9FFFFFF"
        android:ems="10"
        android:hint="@string/enter_mail_to_recover_password"
        android:inputType="textEmailAddress"
        android:textColor="#0B0A0A"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textView13"
        android:autofillHints="" />

    <Button
        android:id="@+id/button12"
        android:layout_width="124dp"
        android:layout_height="45dp"
        android:layout_marginStart="143dp"
        android:layout_marginEnd="144dp"
        android:text="@string/recover"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/editText8"
        app:layout_constraintVertical_bias="0.179" />
</androidx.constraintlayout.widget.ConstraintLayout>